<resources>
    <string name="app_name">Calc</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button0">0</string>
    <string name="button.">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="button_ex">*</string>
    <string name="button_del">/</string>
    <string name="button_result">=</string>
</resources>